dark mode fixed

--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -20,6 +20,7 @@
     font-weight: 400;
     gap: 1.2rem;
     color: var(--word);
+    align-items: center;
   }
 }
 
